flock-camera/rust-project/flock-denver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flock-denver
  labels:
    app: flock-denver
spec:
  type: ClusterIP
  selector:
    app: flock-denver
  ports:
    - name: http
      port: 80
      targetPort: http
